# brick_game

./: CMakeLists.txt  Doxyfile  Makefile  README.md  brick_game.cc
brick_game/snake/: snake.cc  snake.h  snake_help_methods.cc  snake_menu_interaction.cc
brick_game/tetris/: backend.c  fsm.c  matrix.c  matrix.h  menu_interactions.c  tetris.h
gui/cli/: cli.c  cli.h
gui/desktop/: desktop.cc  desktop.h
headers/: brick_game.h  snake_defines.h  specification.h  tetris_defines.h
tests/: snake_tests.cc  tetris_tests.c
